--- a/TEMPLATE001/index.html
+++ b/TEMPLATE001/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Projeto Prático</title>
+        <title>TEMPLATE</title>
         <link href="https://fonts.googleapis.com/css?family=Nunito:400,700,300" rel="stylesheet" type="text/css">
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/estilo.css" rel="stylesheet">
